Fix overflow

--- a/Presentations/Lesson-3/css/custom.css
+++ b/Presentations/Lesson-3/css/custom.css
@@ -40,6 +40,7 @@
 
 #code-string {
     font-size: 30px;
+    overflow: hidden;
 }
 
 #const {
